instructions to restart notebook

--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "![Assimila logo](logosmall.png \"Assimila\")\n",
     "# Assimila Peatlands Demonstrator\n",
-    "# Compare bounding box for 2 time steps"
+    "# Compare bounding box for 2 time steps\n",
+    "\n",
+    "If the drop down menus do not appear restart the notebook by selecting \"Kernel\" then \"Restart\" above."
    ]
   },
   {
@@ -22,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5b683c845c94e1fb825d872081375c0",
+       "model_id": "30034a16d5e244cd9cd5a87ce966c8d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eca72a41cb94a42b3efca5519504ec6",
+       "model_id": "077508395fd0471686ae2a76c74fb899",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +52,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2eb1f6417b04860bd4fcf92713d14f9",
+       "model_id": "11d2d85787e843ea9e484e09611d7152",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7739e325a97d4950977fffa14d0970b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,6 +180,39 @@
     "\n",
     "out = w.display_output()\n",
     "\n",
+    "dc.on_draw(handle_draw)\n",
+    "    \n",
+    "\n",
+    "def handle_draw(self, action, geo_json):\n",
+    "    w = helpers.PeatWidgets()\n",
+    "    s = geo_json.get('geometry','type')\n",
+    "    t = s.get('type')\n",
+    "    \n",
+    "    h = helpers.PeatHelpers(out)\n",
+    "    if t == 'Point':\n",
+    "        north, east, south, west = h.get_coords_point(action, geo_json)\n",
+    "        update_north(north)\n",
+    "        update_east(east)\n",
+    "        update_south(south)\n",
+    "        update_west(west)\n",
+    "        projection = ('w')\n",
+    "\n",
+    "    if t == 'Polygon':\n",
+    "        north, east, south, west = h.get_coords_polygon(action, geo_json)\n",
+    "        update_north(north)\n",
+    "        update_east(east)\n",
+    "        update_south(south)\n",
+    "        update_west(west)\n",
+    "\n",
+    "def update(*args):\n",
+    "    subproduct.options = w.get_subproduct_list(product.value)\n",
+    "    \n",
+    "    \n",
+    "update()\n",
+    "product.observe(update)\n",
+    "\n",
+    "out = w.display_output()\n",
+    "\n",
     "dc.on_draw(handle_draw)\n"
    ]
   },
@@ -206,18 +255,19 @@
     "  - __White sky albedo__ for each band\n",
     "  - __Black sky albedo__ for each band\n",
     "  - __Quality indicators__\n",
-    "    - need interpretation\n"
+    "    - need interpretation"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "![Assimila logo](logosmall.png \"Assimila\")"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
