--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -3,19 +3,22 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hide_input": true
+    "hide_input": false
    },
    "source": [
     "![Assimila logo](logosmall.png \"Assimila\")\n",
     "# Assimila Peatlands Demonstrator\n",
     "\n",
-    "# Get Time Series from the Data Cube"
+    "# Get Time Series from the Data Cube\n",
+    "\n",
+    "If the drop down menus do not appear restart the notebook by selecting \"Kernel\" then \"Restart\" above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
+    "editable": false,
     "hide_input": true,
     "init_cell": true
    },
@@ -23,7 +26,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "731dcac432bf4219b394980b65b88b8a",
+       "model_id": "f3f9c4044d2441fea0daf1bb59b9d73d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +40,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a13ddd038782494b96dfeb0cfe6c3c89",
+       "model_id": "62e27c59d4ff4c52a96e64e9e60fba87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a97a9175c46d4424b768cbb572d71832",
+       "model_id": "95e47b6dd2534b8e9f2b448f68812589",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22e97a5c76d14801876e7e97ea5d1465",
+       "model_id": "e5bce37ba2374bf09ccf69cc2cfa836b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac2603d9fb324dfa880a464fb0a0118f",
+       "model_id": "9fb354c7de7f47a9b8a7ae6c88c60107",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd20c6c0644e4b4aafa076fee88ecf22",
+       "model_id": "2b32908aa6bd41268912918a172f462f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfd2f43575c346c1849911282a0f6649",
+       "model_id": "fd5257b606214f288f5aafa7f92f8496",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93d08b025c2244288b673a8036fd6118",
+       "model_id": "4a2c831a3e6848a68b16a9ce9d2eb8af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6267bf51a9804374a9ac90e77efe2ab2",
+       "model_id": "88becd097c9f4342a18f9df058d8030e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42c41681bb55415e983793198ec9cbac",
+       "model_id": "27af687be47048e482d5d97fee5eb244",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +206,7 @@
     "projection.observe(update)\n",
     "\n",
     "wid.display_widget([product, subproduct, projection, x, y, start, end, button])\n",
-    "out = wid.display_output()\n"
+    "out = wid.display_output()"
    ]
   },
   {
@@ -266,6 +269,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -282,6 +286,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
