check dates available and suggest alternatives

--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -15,7 +15,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "editable": false,
     "hide_input": true,
     "init_cell": true,
     "scrolled": false
@@ -24,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30034a16d5e244cd9cd5a87ce966c8d7",
+       "model_id": "bd146dc4826c47a786b9941df48e755d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "077508395fd0471686ae2a76c74fb899",
+       "model_id": "72906302693544029dc6a2a1d6eb1360",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11d2d85787e843ea9e484e09611d7152",
+       "model_id": "eece5e50a4e347b4a02bbfeb1b4c321b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7739e325a97d4950977fffa14d0970b4",
+       "model_id": "3667409a821f46d7a3a27a4d23df909d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,8 +123,8 @@
     "east = w.get_point(2.5, 'East (lon): ')\n",
     "south = w.get_point((49), 'South (lat): ')\n",
     "west = w.get_point((-13), 'West (lon): ')\n",
-    "date1 = w.get_date(datetime.datetime(2018,1,1), 'Date 1: ')\n",
-    "date2 = w.get_date(datetime.datetime(2018,1,2), 'Date 2: ')\n",
+    "date1 = w.get_date(datetime.date(2018,1,1), 'Date 1: ')\n",
+    "date2 = w.get_date(datetime.date(2018,1,2), 'Date 2: ')\n",
     "button = w.set_up_button(on_button_clicked)\n",
     "w.display_widget_comparison_reduced(product, subproduct, north, east, south, west, \n",
     "                            date1, date2, button, m)\n",
