make cell non-editable

--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "hide_input": true,
+    "hide_input": false,
     "init_cell": true,
     "scrolled": false
    },
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd146dc4826c47a786b9941df48e755d",
+       "model_id": "542af5a0207c4047ab1c810c6172a4f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72906302693544029dc6a2a1d6eb1360",
+       "model_id": "88f6467453894e85adeecc6d6e41bbe2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eece5e50a4e347b4a02bbfeb1b4c321b",
+       "model_id": "ca6e3b0fac244e389d66581195b8a847",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3667409a821f46d7a3a27a4d23df909d",
+       "model_id": "69d3c839e45f434b90127ccaa59aa0ce",
        "version_major": 2,
        "version_minor": 0
       },
