correctly check start and end date

--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "editable": false,
     "hide_input": true,
@@ -26,7 +26,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3f9c4044d2441fea0daf1bb59b9d73d",
+       "model_id": "cea3cdad81724b33b1c99dcfb0e244da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,7 +40,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62e27c59d4ff4c52a96e64e9e60fba87",
+       "model_id": "87783ef668ba4d969a9782f897489054",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95e47b6dd2534b8e9f2b448f68812589",
+       "model_id": "d02c3bf7a88d4fd5a6058dd2248dfe05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5bce37ba2374bf09ccf69cc2cfa836b",
+       "model_id": "3cd2e7b2fdbc40b488c1bd87b1b28ad3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fb354c7de7f47a9b8a7ae6c88c60107",
+       "model_id": "49d23f0b90a4412bba8d6957fd7a00fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b32908aa6bd41268912918a172f462f",
+       "model_id": "64caf54414e24ca587e68ac8aee2ea3b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,12 +110,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd5257b606214f288f5aafa7f92f8496",
+       "model_id": "0991ef5816424a1a8a3b75d5cf759b5f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "DatePicker(value=datetime.datetime(2000, 1, 1, 0, 0), description='Start Date: ', layout=Layout(height='30px',…"
+       "DatePicker(value=datetime.date(2000, 1, 1), description='Start Date: ', layout=Layout(height='30px', width='40…"
       ]
      },
      "metadata": {},
@@ -124,12 +124,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a2c831a3e6848a68b16a9ce9d2eb8af",
+       "model_id": "7c03203f881347f9b92bbb5f4bde6185",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "DatePicker(value=datetime.datetime(2000, 2, 1, 0, 0), description='EndDate: ', layout=Layout(height='30px', wi…"
+       "DatePicker(value=datetime.date(2000, 2, 1), description='EndDate: ', layout=Layout(height='30px', width='400px…"
       ]
      },
      "metadata": {},
@@ -138,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88becd097c9f4342a18f9df058d8030e",
+       "model_id": "401b1dd2b2e8437289670d43fe09d069",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27af687be47048e482d5d97fee5eb244",
+       "model_id": "13d136510bcd44a88ee069231339dc2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,13 +165,14 @@
     }
    ],
    "source": [
+    "import datetime as dt\n",
     "import sys\n",
     "sys.path.append(\"helpers\")\n",
     "import helpers.peatlands_helpers as helpers\n",
     "%matplotlib inline\n",
     "\n",
     "def on_button_clicked(b): \n",
-    "    h = helpers.PeatHelpers(out) #helpers.Helpers(out)\n",
+    "    h = helpers.PeatHelpers(out) \n",
     "    data = h.data_to_csv(product.value,\n",
     "                  subproduct.value,\n",
     "                  projection.value,\n",
@@ -182,6 +183,8 @@
     "\n",
     "wid = helpers.PeatWidgets()\n",
     "start, end = wid.get_date_widgets()\n",
+    "start.value=dt.date(2000, 1, 1)\n",
+    "end.value=dt.date(2000, 2, 1)\n",
     "x, y = wid.get_lat_lon_widgets()\n",
     "product = wid.product()\n",
     "subproduct = wid.subproduct()\n",
