use local keyfile and DQTools

--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true,
     "scrolled": false
    },
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "542af5a0207c4047ab1c810c6172a4f0",
+       "model_id": "2422b6c3eba844e59d5d133899bc6754",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88f6467453894e85adeecc6d6e41bbe2",
+       "model_id": "8c28d033577f4029b92450cdb6443cd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca6e3b0fac244e389d66581195b8a847",
+       "model_id": "ed1e78a9de2e4089b622c024c55d1c2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69d3c839e45f434b90127ccaa59aa0ce",
+       "model_id": "a42f48adb6e240c1a77e7312a15fdd57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +96,7 @@
     "\n",
     "def on_button_clicked(b):\n",
     "\n",
-    "    h = helpers.PeatHelpers(out)\n",
+    "    h = helpers.PeatHelpers(out, keyfile = \"helpers/.assimila_dq\")\n",
     "    m1 = h.color_map_nesw_compare_reduced(product.value, \n",
     "                                  subproduct.value, \n",
     "                                  north.value,\n",
