--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -18,7 +18,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "editable": false,
     "hide_input": true,
     "init_cell": true
    },
@@ -26,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cea3cdad81724b33b1c99dcfb0e244da",
+       "model_id": "e9a17034aaa840e981d9e3e9e96faa71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87783ef668ba4d969a9782f897489054",
+       "model_id": "3c4282a984314e8a97f8cb223e2535fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d02c3bf7a88d4fd5a6058dd2248dfe05",
+       "model_id": "3b0047b1ab774bba809227a1da4e9e2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cd2e7b2fdbc40b488c1bd87b1b28ad3",
+       "model_id": "8474566872f04f1f8e3ed158dd9899ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49d23f0b90a4412bba8d6957fd7a00fa",
+       "model_id": "ee14ce8d752c4d959af26a845b2cdbd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64caf54414e24ca587e68ac8aee2ea3b",
+       "model_id": "9bce94537fdc4963b73f2c06a883c177",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0991ef5816424a1a8a3b75d5cf759b5f",
+       "model_id": "7cfada0f4a4948fe85e07da5d3442bde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c03203f881347f9b92bbb5f4bde6185",
+       "model_id": "8d65aa8941ff44889b033b1213582898",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "401b1dd2b2e8437289670d43fe09d069",
+       "model_id": "ff1907c8e1a9495c9cdcbea23ad35c9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13d136510bcd44a88ee069231339dc2c",
+       "model_id": "53806c5177e74b159baabae0c26752ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +171,7 @@
     "%matplotlib inline\n",
     "\n",
     "def on_button_clicked(b): \n",
-    "    h = helpers.PeatHelpers(out) \n",
+    "    h = helpers.PeatHelpers(out, keyfile = \"helpers/.assimila_dq\") \n",
     "    data = h.data_to_csv(product.value,\n",
     "                  subproduct.value,\n",
     "                  projection.value,\n",
