Figures cleaned after every plot, imshow is used instead of QuadMesh (default DataArray.plot method) and image aspect is 'equal'

--- a/peatlands_compare_bounding_box_for_2_time_steps.ipynb
+++ b/peatlands_compare_bounding_box_for_2_time_steps.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "source": [
     "![Assimila logo](logosmall.png \"Assimila\")\n",
     "# Assimila Peatlands Demonstrator\n",
@@ -23,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2422b6c3eba844e59d5d133899bc6754",
+       "model_id": "2341657e8acd438292be51851028a26d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c28d033577f4029b92450cdb6443cd3",
+       "model_id": "e64d2e7a4c3b4961a680c5496baa0a58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed1e78a9de2e4089b622c024c55d1c2d",
+       "model_id": "8e9f3177519b479393330aec87b10b57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a42f48adb6e240c1a77e7312a15fdd57",
+       "model_id": "daaf8b0c42a34b29a1f7f5cf424356a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,8 +84,8 @@
     "sys.path.append(\"helpers/\")\n",
     "import helpers.peatlands_helpers as helpers\n",
     "import matplotlib\n",
-    "%matplotlib inline\n",
-    "matplotlib.use(\"nbagg\")\n",
+    "%matplotlib notebook\n",
+    "# matplotlib.use(\"nbagg\")\n",
     "from IPython.display import clear_output\n",
     "\n",
     "from ipyleaflet import (Map, Marker, basemaps, basemap_to_tiles, \n",
@@ -266,7 +268,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
