update to run for new RH data

--- a/IUKColombia/relative_humidity.ipynb
+++ b/IUKColombia/relative_humidity.ipynb
@@ -174,9 +174,7 @@
     "        _data = xr.DataArray(data['Relative.Humidity_hourly.mean'],\n",
     "                             name='Relative.Humidity_hourly.mean.QC',\n",
     "                             dims=['time'],\n",
-    "                             coords={'latitude' : rh.latitude.values,\n",
-    "                                     'longitude' : rh.longitude.values,\n",
-    "                                     'time' : data['date']})\n",
+    "                             coords={'time' : data['date']})\n",
     "        \n",
     "        # Create merged dataset\n",
     "        global merged\n",
