Peatlands notebook uses identfile when getting data using DQTools

--- a/Peatlands.ipynb
+++ b/Peatlands.ipynb
@@ -37,7 +37,7 @@
     "    keyfile = os.path.join('helpers/.assimila_dq')\n",
     "    \n",
     "    ds = Dataset(product=product, subproduct=subproduct,\n",
-    "                 key_file=keyfile)\n",
+    "                 identfile=keyfile)\n",
     "\n",
     "    ds.get_data(start=start, stop=end,\n",
     "                latlon=[latitude, longitude])\n",
@@ -50,7 +50,7 @@
     "    keyfile = os.path.join('helpers/.assimila_dq')\n",
     "\n",
     "    ds = Dataset(product=product, subproduct=subproduct,\n",
-    "                 key_file=keyfile)\n",
+    "                 identfile=keyfile)\n",
     "\n",
     "    ds.get_data(start=start, stop=end,\n",
     "                region=[north, east, south,west])\n",
