default dates and locations now for data that is in the cube

--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9a17034aaa840e981d9e3e9e96faa71",
+       "model_id": "5ef2d48b7b26426fb96be4a95c8be156",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c4282a984314e8a97f8cb223e2535fa",
+       "model_id": "19e9d1a10d7d4ecb8894edfe6b4bd968",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b0047b1ab774bba809227a1da4e9e2a",
+       "model_id": "f1980cbe0b9647c89648abd20e333051",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8474566872f04f1f8e3ed158dd9899ed",
+       "model_id": "7abcebe249724f3d9819be4289b0fb38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,12 +81,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee14ce8d752c4d959af26a845b2cdbd0",
+       "model_id": "10ad67ac2e0d40749a92cb93f60fedd2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "BoundedFloatText(value=7.5, description='Longitude (x)', layout=Layout(height='30px', width='400px'), max=180.…"
+       "BoundedFloatText(value=-2.28, description='Longitude (x)', layout=Layout(height='30px', width='400px'), max=18…"
       ]
      },
      "metadata": {},
@@ -95,12 +95,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bce94537fdc4963b73f2c06a883c177",
+       "model_id": "1621b6c51c46461bbe56b450a87afd05",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "BoundedFloatText(value=7.5, description='Latitude (y)', layout=Layout(height='30px', width='400px'), max=90.0,…"
+       "BoundedFloatText(value=54.8, description='Latitude (y)', layout=Layout(height='30px', width='400px'), max=90.0…"
       ]
      },
      "metadata": {},
@@ -109,12 +109,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cfada0f4a4948fe85e07da5d3442bde",
+       "model_id": "f264493587074946b88cd8cc567db46a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "DatePicker(value=datetime.date(2000, 1, 1), description='Start Date: ', layout=Layout(height='30px', width='40…"
+       "DatePicker(value=datetime.date(2009, 1, 8), description='Start Date: ', layout=Layout(height='30px', width='40…"
       ]
      },
      "metadata": {},
@@ -123,12 +123,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d65aa8941ff44889b033b1213582898",
+       "model_id": "48b3825054214dc1898efbdee21cd288",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "DatePicker(value=datetime.date(2000, 2, 1), description='EndDate: ', layout=Layout(height='30px', width='400px…"
+       "DatePicker(value=datetime.date(2015, 12, 30), description='EndDate: ', layout=Layout(height='30px', width='400…"
       ]
      },
      "metadata": {},
@@ -137,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff1907c8e1a9495c9cdcbea23ad35c9a",
+       "model_id": "85517b997e734182b0cf35fbaca31e88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,7 +151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53806c5177e74b159baabae0c26752ad",
+       "model_id": "791b811af3e64f1aa7392421ea8f338b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,9 +182,11 @@
     "\n",
     "wid = helpers.PeatWidgets()\n",
     "start, end = wid.get_date_widgets()\n",
-    "start.value=dt.date(2000, 1, 1)\n",
-    "end.value=dt.date(2000, 2, 1)\n",
+    "start.value=dt.date(2009, 1, 8)\n",
+    "end.value=dt.date(2015, 12, 30)\n",
     "x, y = wid.get_lat_lon_widgets()\n",
+    "x.value = -2.28\n",
+    "y.value = 54.8\n",
     "product = wid.product()\n",
     "subproduct = wid.subproduct()\n",
     "projection = wid.projection()\n",
