--- a/peatlands_extract_csv_from_datacube.ipynb
+++ b/peatlands_extract_csv_from_datacube.ipynb
@@ -16,153 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "hide_input": true,
     "init_cell": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ef2d48b7b26426fb96be4a95c8be156",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19e9d1a10d7d4ecb8894edfe6b4bd968",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Product:', layout=Layout(height='30px', width='400px'), options=('MOD11A1', 'MOD13A2', '…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1980cbe0b9647c89648abd20e333051",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Subproduct:', layout=Layout(height='30px', width='400px'), options=('LST_Day_1km', 'Day_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7abcebe249724f3d9819be4289b0fb38",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Projection:', layout=Layout(height='30px', width='400px'), options=('WGS84', 'British Na…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10ad67ac2e0d40749a92cb93f60fedd2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "BoundedFloatText(value=-2.28, description='Longitude (x)', layout=Layout(height='30px', width='400px'), max=18…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1621b6c51c46461bbe56b450a87afd05",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "BoundedFloatText(value=54.8, description='Latitude (y)', layout=Layout(height='30px', width='400px'), max=90.0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f264493587074946b88cd8cc567db46a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DatePicker(value=datetime.date(2009, 1, 8), description='Start Date: ', layout=Layout(height='30px', width='40…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48b3825054214dc1898efbdee21cd288",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DatePicker(value=datetime.date(2015, 12, 30), description='EndDate: ', layout=Layout(height='30px', width='400…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85517b997e734182b0cf35fbaca31e88",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(button_style='primary', description='Get Data', layout=Layout(height='30px', width='400px'), styl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "791b811af3e64f1aa7392421ea8f338b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime as dt\n",
     "import sys\n",
@@ -273,7 +132,8 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
+  "celltoolbar": "Initialization Cell",
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
